// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trusted documents setup tests GraphQL Handler updates default handler where the trusted document store is not configured updates the handler with the trusted document store 1`] = `
"import { createAuthDecoder } from '@redwoodjs/auth-dbauth-api'
import { createGraphQLHandler } from '@redwoodjs/graphql-server'

import directives from 'src/directives/**/*.{js,ts}'
import sdls from 'src/graphql/**/*.sdl.{js,ts}'
import services from 'src/services/**/*.{js,ts}'

import { cookieName, getCurrentUser } from 'src/lib/auth'
import { db } from 'src/lib/db'
import { logger } from 'src/lib/logger'
import { store } from 'src/lib/trustedDocumentsStore'

const authDecoder = createAuthDecoder(cookieName)

export const handler = createGraphQLHandler({
  authDecoder,
  getCurrentUser,
  loggerConfig: { logger, options: {} },
  directives,
  sdls,
  services,
  onException: () => {
    // Disconnect from your database with an unhandled exception.
    db.$disconnect()
  },
  trustedDocuments: { store },
})
"
`;

exports[`Trusted documents setup tests Project toml configuration updates default toml where graphql fragments are already setup updates the toml file with graphql and trusted documents enabled and keeps fragments 1`] = `
{
  "newConfig": "# This file contains the configuration settings for your Redwood app.
# This file is also what makes your Redwood app a Redwood app.
# If you remove it and try to run \`yarn rw dev\`, you'll get an error.
#
# For the full list of options, see the "App Configuration: redwood.toml" doc:
# https://redwoodjs.com/docs/app-configuration-redwood-toml

[web]
  title = "Redwood App"
  port = "\${WEB_DEV_PORT:8910}"
  apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
  includeEnvironmentVariables = [
    # Add any ENV vars that should be available to the web side to this array
    # See https://redwoodjs.com/docs/environment-variables#web
  ]
[api]
  port = "\${API_DEV_PORT:8911}"
[graphql]
  fragments = true
  trustedDocuments = true
[browser]
  open = true
[notifications]
  versionUpdates = ["latest"]
",
  "trustedDocumentsExists": false,
}
`;

exports[`Trusted documents setup tests Project toml configuration updates default toml where graphql fragments are already setup using no spaces updates the toml file with graphql and trusted documents enabled and keeps fragments 1`] = `
{
  "newConfig": "# This file contains the configuration settings for your Redwood app.
# This file is also what makes your Redwood app a Redwood app.
# If you remove it and try to run \`yarn rw dev\`, you'll get an error.
#
# For the full list of options, see the "App Configuration: redwood.toml" doc:
# https://redwoodjs.com/docs/app-configuration-redwood-toml

[web]
  title = "Redwood App"
  port = "\${WEB_DEV_PORT:8910}"
  apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
  includeEnvironmentVariables = [
    # Add any ENV vars that should be available to the web side to this array
    # See https://redwoodjs.com/docs/environment-variables#web
  ]
[api]
  port = "\${API_DEV_PORT:8911}"
[graphql]
  fragments=true
  trustedDocuments = true
[browser]
  open = true
[notifications]
  versionUpdates = ["latest"]
",
  "trustedDocumentsExists": false,
}
`;

exports[`Trusted documents setup tests Project toml configuration updates default toml where graphql trusted documents and fragments are already setup makes no changes as trusted documents are already setup 1`] = `
{
  "newConfig": undefined,
  "trustedDocumentsExists": true,
}
`;

exports[`Trusted documents setup tests Project toml configuration updates default toml where graphql trusted documents are already setup makes no changes as trusted documents are already setup 1`] = `
{
  "newConfig": undefined,
  "trustedDocumentsExists": true,
}
`;

exports[`Trusted documents setup tests Project toml configuration updates default toml where graphql trusted documents are already setup using no spaces makes no changes as trusted documents are already setup 1`] = `
{
  "newConfig": undefined,
  "trustedDocumentsExists": true,
}
`;

exports[`Trusted documents setup tests Project toml configuration updates default toml where no graphql or trusted documents is setup updates the toml file with graphql and trusted documents enabled 1`] = `
{
  "newConfig": "# This file contains the configuration settings for your Redwood app.
# This file is also what makes your Redwood app a Redwood app.
# If you remove it and try to run \`yarn rw dev\`, you'll get an error.
#
# For the full list of options, see the "App Configuration: redwood.toml" doc:
# https://redwoodjs.com/docs/app-configuration-redwood-toml

[web]
  title = "Redwood App"
  port = "\${WEB_DEV_PORT:8910}"
  apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
  includeEnvironmentVariables = [
    # Add any ENV vars that should be available to the web side to this array
    # See https://redwoodjs.com/docs/environment-variables#web
  ]
[api]
  port = "\${API_DEV_PORT:8911}"
[browser]
  open = true
[notifications]
  versionUpdates = ["latest"]

[graphql]
  trustedDocuments = true",
  "trustedDocumentsExists": false,
}
`;

exports[`Trusted documents setup tests Project toml configuration updates toml where graphql section is commented out adds a new section with \`trustedDocuments = true\` 1`] = `
{
  "newConfig": "# This file contains the configuration settings for your Redwood app.
# This file is also what makes your Redwood app a Redwood app.
# If you remove it and try to run \`yarn rw dev\`, you'll get an error.
#
# For the full list of options, see the "App Configuration: redwood.toml" doc:
# https://redwoodjs.com/docs/app-configuration-redwood-toml

[web]
  title = "Redwood App"
  port = "\${WEB_DEV_PORT:8910}"
  apiUrl = "/.redwood/functions" # You can customize graphql and dbauth urls individually too: see https://redwoodjs.com/docs/app-configuration-redwood-toml#api-paths
  includeEnvironmentVariables = [
    # Add any ENV vars that should be available to the web side to this array
    # See https://redwoodjs.com/docs/environment-variables#web
  ]
[api]
  port = "\${API_DEV_PORT:8911}"
# [graphql]
#  trustedDocuments = true
[browser]
  open = true
[notifications]
  versionUpdates = ["latest"]

[graphql]
  trustedDocuments = true",
  "trustedDocumentsExists": false,
}
`;
